--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Pagina para el curso</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
 <body>
     <!-- El navegador no lo lee-->
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus itaque voluptates natus ipsam doloribus maxime sapiente mollitia, minima, impedit ab excepturi, tempore cum placeat deleniti voluptas dolore debitis optio id. soyisaac@gmail.com</p>
+    <script src="main.js"></script>
 </body>
 </html>
