Test de curso de vscode

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <!-- El navegador no lo lee-->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus itaque voluptates natus ipsam doloribus maxime sapiente mollitia, minima, impedit ab excepturi, tempore cum placeat deleniti voluptas dolore debitis optio id. soyisaac@gmail.com</p>
-    <script src="main.js"></script>
+
+    <div>
+        
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus itaque voluptates natus ipsam doloribus maxime sapiente mollitia, minima, impedit ab excepturi, tempore cum placeat deleniti voluptas dolore debitis optio id. soyisaac@gmail.com
+    </p>
+    <script src="js/main.js"></script>
 </body>
 </html>
